--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,6 +18,7 @@
 
 // Components
 @import './assets/styles/components/_header.scss';
+@import './assets/styles/components/_portal.scss';
 @import './assets/styles/components/_signin.scss';
 @import './assets/styles/components/_signup.scss';
 @import './assets/styles/components/_dashboard-opportunity-list.scss';
