--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -13,10 +13,27 @@
 
 .portal-aside {
   flex: 10 0 50%;
-  background: url('https://s3-us-west-2.amazonaws.com/dotcom-files/white_orange_formbackground.jpg');
+  background: url('./assets/images/binary-gradient.jpg');
   background-position: center;
   background-size: cover;
-  padding: $pad-double;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.program-block {
+  background: rgba(201, 210, 210, .11);
+  padding: $pad;
+  margin: $space-and-half;
+  margin-top: 0;
+
+  .program-logo {
+    height: 40px;
+    width: auto;
+  }
+  p  {
+    color: $color-white;
+  }
 }
 
 .form-content {
