portal styling fixes

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -88,6 +88,7 @@ $pad-quarter : calc(#{$pad}/4);
 /* container area */
 $container-width: 1170px;
 $container-width-wide: 1440px;
+$portal-width: 1180px;
 
 /* responsive widths */
 $width-mobile: 480px;
