--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -17,6 +17,7 @@
 
 
 // Components
+@import './assets/styles/components/_hero.scss';
 @import './assets/styles/components/_header.scss';
 @import './assets/styles/components/_portal.scss';
 @import './assets/styles/components/_signin.scss';
