--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -2,7 +2,8 @@
 
   .portal-inner >.challenge-editor {
     display: flex;
-    margin-top: $space-double;
+    margin: $space-double 0;
+    padding: 0 $pad;
 
     .col {
       border: 1px solid $color-brand-primary;
@@ -43,7 +44,7 @@
        }
 
        .-pass {
-         color: $color-green;
+         color: $color-gray-2;
          font-weight: 500;
        }
     }
