--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -44,7 +44,7 @@
        }
 
        .-pass {
-         color: $color-gray-2;
+         color: $color-gray-3;
          font-weight: 500;
        }
     }
@@ -65,6 +65,8 @@
         margin: $space;
 
         span {
+          flex: 2;
+          margin-right: $space-double;
           color: $color-gray-3;
           font-style: italic;
         }
