internal state update

--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -29,6 +29,10 @@
   .program-logo {
     height: 40px;
     width: auto;
+
+    &.-dsi {
+      height: 45px;
+    }
   }
   p  {
     color: $color-white;
