--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -62,6 +62,7 @@
       .action {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin: $space;
 
         span {
