styling for portal margins

--- a/client/src/assets/styles/components/_portal.scss
+++ b/client/src/assets/styles/components/_portal.scss
@@ -4,3 +4,8 @@
   flex-direction: column;
   box-shadow: 0px 0px 1px rgba(0,0,0,0.25);
 }
+
+.column-headline {
+  font-weight: 500;
+  text-align: center;
+}
