--- a/client/src/assets/styles/base/_button.scss
+++ b/client/src/assets/styles/base/_button.scss
@@ -104,14 +104,14 @@
   }
   &:hover {
     color: $bg-color;
-    background-color: color($border-color shade(10));
-    border: 2px solid color($border-color shade(10));
+    background-color: darken($border-color, 10%);
+    border: 2px solid darken($border-color, 10%);
     transition: none;
   }
   &:focus, &:active {
     color: $bg-color;
-    background-color: color($border-color shade(50));
-    border: 2px solid color($border-color shade(50));
+    background-color: darken($border-color, 50%);
+    border: 2px solid darken($border-color, 50%);
   }
   &.-loading {
     /*@extend %hide-text;*/
@@ -136,14 +136,14 @@
   }
   &:hover {
     color: $color-white;
-    background-color: color($fg-color shade(10));
-    border: 2px solid color($fg-color shade(10));
+    background-color: darken($fg-color, 10%);
+    border: 2px solid darken($fg-color, 10%);
     transition: none;
   }
   &:focus, &:active {
     color: $bg-color;
-    background-color: color($fg-color shade(50));
-    border: 2px solid color($fg-color shade(50));
+    background-color: darken($fg-color, 50%);
+    border: 2px solid darken($fg-color, 50%);
   }
   &.-loading {
     /*@extend %hide-text;*/
@@ -164,12 +164,12 @@
   }
   &:hover {
     color: $bg-color;
-    background-color: color($fg-color shade(10));
+    background-color: darken($fg-color, 10%);
     transition: none;
   }
   &:focus, &:active {
     color: $fg-color;
-    background-color: color($bg-color shade(50));
+    background-color: darken($bg-color, 50%);
   }
   &.-loading {
     /*@extend %hide-text;*/
@@ -296,11 +296,11 @@
 
   &:hover {
     .button-primary, .inner {
-      background-color: color($bg-color shade(10));
+      background-color: darken($bg-color, 10%);
     }
     .outer {
       transform: translateX(4px);
-      border-color: color($bg-color shade(10));
+      border-color: color($bg-color, 10%);
     }
   }
   &.-large .button-primary {
