removing table columns for mobile

--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -120,3 +120,32 @@
     }
   }
 }
+
+@media (max-width: 875px) {
+  .table {
+    .table-body .table-row.-steps {
+      .step {
+        width: 165px;
+
+        &::after {
+          width: 160px;
+          left: 95px;
+        }
+      }
+    }
+    .hide-tablet {
+      display: none!important;
+    }
+  }
+}
+
+@media (max-width: 735px) {
+  .table {
+    .table-body .table-row.-steps {
+      display: none;
+    }
+    .hide-mobile {
+      display: none!important;
+    }
+  }
+}
