--- a/client/src/assets/styles/components/_next-steps.scss
+++ b/client/src/assets/styles/components/_next-steps.scss
@@ -3,11 +3,12 @@
 
     & {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
       background: $color-gray-5;
       padding: $pad-and-half;
-      margin: 0 $space $space $space;
+      margin: $space;
       color: white;
     }
 
