book interview mobile responsive

--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -147,5 +147,10 @@
     .hide-mobile {
       display: none!important;
     }
+
+    .next-steps {
+      text-align: center;
+      justify-content: center;
+    }
   }
 }
