coding challenge mobile

--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -140,7 +140,8 @@
 }
 
 @media (max-width: 735px) {
-  .table {
+  .dashboard .table {
+    padding: $pad;
     .table-body .table-row.-steps {
       display: none;
     }
