--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -2,12 +2,13 @@
 
   .portal-inner >.challenge-editor {
     display: flex;
-    margin: $space-double 0;
+    flex-wrap: wrap;
     padding: 0 $pad;
 
     .col {
       border: 1px solid $color-brand-primary;
       border-radius: 5px;
+      margin: $space;
     }
     .column-header {
       background: $color-gray-1;
@@ -19,7 +20,6 @@
     .instructions {
       flex: 1.5;
       list-style-position: inside;
-      margin-right: $pad;
 
       ol {
         padding: $pad $pad-double;
@@ -74,5 +74,26 @@
       }
     }
   }
+}
 
+@media (max-width: $width-mobile) {
+  .coding-challenge {
+    .portal-inner .challenge-editor {
+      padding: 0;
+
+      .code-editor {
+        margin: 0;
+        width: 100%;
+
+        .action {
+          flex-direction: column;
+          text-align: center;
+
+          button {
+            margin-top: $space;
+          }
+        }
+      }
+    }
+  }
 }
