--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -152,6 +152,10 @@
     .next-steps {
       text-align: center;
       justify-content: center;
+
+      .left-text {
+        padding: 0;
+      }
     }
   }
 }
