--- a/client/src/assets/styles/components/_hero.scss
+++ b/client/src/assets/styles/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   padding: $pad-double;
   text-align: left;
-  background: url('./assets/images/binary-gradient.jpg');
+  background: url('./assets/images/grid_background.png');
   background-size: cover;
   .hero-title {
     color: white;
