--- a/client/src/assets/styles/components/_next-steps.scss
+++ b/client/src/assets/styles/components/_next-steps.scss
@@ -13,7 +13,7 @@
     }
 
     .left-text {
-      padding-right: $pad-and-half;
+      padding-right: $pad-triple;
       flex: 1;
       min-width: 65%;
     }
