--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -21,6 +21,7 @@
 @import './assets/styles/components/_hero.scss';
 @import './assets/styles/components/_header.scss';
 @import './assets/styles/components/_portal.scss';
+@import './assets/styles/components/_resources-block.scss';
 @import './assets/styles/components/_signin.scss';
 @import './assets/styles/components/_signup.scss';
 @import './assets/styles/components/_dashboard-opportunity-list.scss';
