fixed linting errors

--- a/client/src/assets/styles/components/_breadcrumb.scss
+++ b/client/src/assets/styles/components/_breadcrumb.scss
@@ -1,6 +1,8 @@
 .breadcrumb {
   padding: $pad;
   background: $color-gray-1;
+  display: flex;
+  justify-content: space-between;
 
   a, button {
     cursor: pointer;
