reworked homepage login styling

--- a/client/src/assets/styles/components/_signin.scss
+++ b/client/src/assets/styles/components/_signin.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     flex: 5 0 50%;
-    padding: $pad-double;
+    padding: $pad;
   }
 
   .forgot-password {
