--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -134,6 +134,7 @@ form {
   .title {
     font-size: 36px;
     margin: 0;
+    margin-top: 12px;
     position: relative;
      span {
        font-size: 12px;
