added loading wheel

--- a/client/src/assets/styles/base/_form.scss
+++ b/client/src/assets/styles/base/_form.scss
@@ -95,6 +95,10 @@ label {
   /*@include center-layout;*/
 }
 
+.error-wrapper {
+  text-align: center;
+}
+
 .form-note {
   & {
     font-style: italic;
