validating reset form

--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -111,7 +111,7 @@ form {
     margin-top: $space-and-half;
   }
   .input-group {
-    margin: 0 $space 12px $space;
+    margin: 0 10px 12px 10px;
   }
 
   .checkbox-field {
