--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -79,7 +79,6 @@
 }
 
 .citation {
-  background: #fdffe0;
   padding: $pad 12px;
   font-size: 13px;
   margin: 0;
@@ -152,6 +151,10 @@ form {
     font-weight: 500;
     text-align: center;
     font-size: 25px;
+
+    &.-forgot-pass {
+      margin-top: 90px;
+    }
   }
 
   .title-subtext {
