--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -14,6 +14,7 @@
       background: $color-gray-1;
       margin: 0;
       padding: $pad $pad-double;
+      border-radius: 5px 5px 0 0;
       border-bottom: 1px solid $color-gray-2;
     }
 
@@ -21,7 +22,7 @@
       flex: 1.5;
       list-style-position: inside;
 
-      ol {
+      ol, p {
         padding: $pad $pad-double;
       }
 
