--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,7 @@
 @import './assets/styles/base/_button.scss';
 
 // Pages
+@import './assets/styles/pages/_application-steps.scss';
 @import './assets/styles/pages/_home.scss';
 @import './assets/styles/pages/_dashboard.scss';
 @import './assets/styles/pages/_coding-challenge.scss';
