--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,6 +18,7 @@
 
 
 // Components
+@import './assets/styles/components/_admissions-steps.scss';
 @import './assets/styles/components/_breadcrumb.scss';
 @import './assets/styles/components/_hero.scss';
 @import './assets/styles/components/_header.scss';
