--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -147,7 +147,7 @@ form {
   }
 
   .portal-title {
-    margin: 45px 0 0 0;
+    margin: 60px 0 0 0;
     font-weight: 500;
     text-align: center;
     font-size: 25px;
@@ -161,6 +161,7 @@ form {
     text-transform: uppercase;
     font-size: 12px;
     text-align: center;
+    margin-bottom: $space;
   }
 }
 
