--- a/client/src/assets/styles/base/_text.scss
+++ b/client/src/assets/styles/base/_text.scss
@@ -48,7 +48,7 @@ p.-inverse {
 .citation {
   font-style: italic;
   font-size: 14px;
-  margin-top: $space-triple;
+  margin-top: $space-double;
 
   &.-thin {
     margin-top: 0;
