add messaging around clicking save in application

--- a/client/src/assets/styles/pages/_application-steps.scss
+++ b/client/src/assets/styles/pages/_application-steps.scss
@@ -45,4 +45,9 @@
     margin-top: $pad-double;
   }
 
+  .come-back-message {
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 50px;
+  }
 }
