--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -52,6 +52,48 @@
       background: $color-gray-1;
     }
   }
+
+  .delete-application {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      cursor: pointer;
+    }
+  }
+
+  .error {
+    display: flex;
+    justify-content: flex-end;
+    color: red;
+  }
+}
+
+.modal-content-wrapper {
+  text-align: center;
+
+  .modal-buttons {
+    display: flex;
+    justify-content: center;
+    padding-top: 25px;
+  }
+
+  button {
+    height: 40px;
+    width: 100px;
+    cursor: pointer;
+    border: 1px solid $color-brand-primary;
+    border-radius: 2px;
+  }
+
+  .cancel-button {
+    background-color: $color-brand-primary;
+    margin-right: 25px;
+  }
+
+  .delete-button {
+    background-color: white;
+  }
 }
 
 @media (max-width: 875px) {
