--- a/client/src/assets/styles/base/_body.scss
+++ b/client/src/assets/styles/base/_body.scss
@@ -74,3 +74,13 @@ body {
 .-margin-top {
   margin-top: $space-double;
 }
+
+.ReactModalPortal {
+  z-index: 2;
+}
+
+.flex--col--center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
