--- a/client/src/assets/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/assets/styles/components/_dashboard-opportunity-list.scss
@@ -69,6 +69,13 @@
   }
 }
 
+.modal-button {
+  padding-top: $pad/2;
+  color: white;
+  margin-bottom: -2em;
+  padding-bottom: $pad;
+}
+
 .modal-content-wrapper {
   text-align: center;
 
@@ -77,24 +84,9 @@
     justify-content: center;
     padding-top: 25px;
   }
-
-  button {
-    height: 40px;
-    width: 100px;
-    cursor: pointer;
-    border: 1px solid $color-brand-primary;
-    border-radius: 2px;
-  }
-
-  .cancel-button {
-    background-color: $color-brand-primary;
-    margin-right: 25px;
-  }
-
-  .delete-button {
-    background-color: white;
-  }
 }
+
+
 
 @media (max-width: 875px) {
   .table {
