added loading wheel for application fetch

--- a/client/src/assets/styles/pages/_application-steps.scss
+++ b/client/src/assets/styles/pages/_application-steps.scss
@@ -45,9 +45,8 @@
     margin-top: $pad-double;
   }
 
-  .come-back-message {
+  .header-description {
     text-align: center;
-    margin-bottom: 0;
-    margin-top: 50px;
+    margin-bottom: $pad;
   }
 }
