--- a/client/src/assets/styles/pages/_application-steps.scss
+++ b/client/src/assets/styles/pages/_application-steps.scss
@@ -16,7 +16,6 @@
     padding: $pad-double;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
   }
 
@@ -43,6 +42,7 @@
     justify-content: center;
     align-items: center;
     margin-top: $pad-double;
+    width: 100%;
   }
 
   .header-description {
