--- a/client/src/assets/styles/pages/_application-steps.scss
+++ b/client/src/assets/styles/pages/_application-steps.scss
@@ -26,6 +26,7 @@
   .application-form >.select,
   .application-form >.text  {
       width: 50%;
+      flex-grow: 2;
   }
 
   .application-form >.textarea,
