--- a/client/src/assets/styles/base/_button.scss
+++ b/client/src/assets/styles/base/_button.scss
@@ -67,17 +67,14 @@
 
   $fg-color: white;
   $bg-color: $color-brand-primary;
-  & {
+  &, &:focus, &:active {
     color: $fg-color;
     background-color: $bg-color;
     border: 2px solid transparent;
     border-radius: 0;
+    box-shadow: none;
   }
   &:hover {
-    color: $fg-color;
-    background-color: darken($color-brand-primary, 10%);
-  }
-  &:focus, &:active {
     color: $fg-color;
     background-color: darken($color-brand-primary, 10%);
   }
@@ -95,23 +92,19 @@
   $border-color: $color-brand-primary;
   $bg-color: white;
   $fg-color: $color-gray-4;
-  & {
+  &, &:focus, &:active {
     color: $fg-color;
     font-weight: 500;
     background-color: transparent;
     border: 2px solid $border-color;
     letter-spacing: 1px;
+    box-shadow: none;
   }
   &:hover {
-    color: $bg-color;
-    background-color: darken($border-color, 10%);
     border: 2px solid darken($border-color, 10%);
+    color: $fg-color;
+    background-color: transparent;
     transition: none;
-  }
-  &:focus, &:active {
-    color: $bg-color;
-    background-color: darken($border-color, 10%);
-    border: 2px solid darken($border-color, 10%);
   }
   &.-loading {
     /*@extend %hide-text;*/
