updated group assessment link

--- a/client/src/assets/styles/pages/_application-steps.scss
+++ b/client/src/assets/styles/pages/_application-steps.scss
@@ -35,6 +35,8 @@
   }
 
   .application-form >.textarea .char-count {
+    display: flex;
+    justify-content: space-between;
     color: $color-gray-3;
     line-height: 2em;
     font-style: italic;
