--- a/client/src/assets/styles/components/_signin.scss
+++ b/client/src/assets/styles/components/_signin.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     flex: 5 0 50%;
     padding: $pad;
   }
