--- a/client/src/assets/styles/components/_signup.scss
+++ b/client/src/assets/styles/components/_signup.scss
@@ -2,6 +2,7 @@
   & {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     flex: 5 0 50%;
   }
