--- a/client/src/assets/styles/pages/_home.scss
+++ b/client/src/assets/styles/pages/_home.scss
@@ -11,7 +11,7 @@
 .portal {
   background: $color-white;
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   box-shadow: 0px 0px 1px rgba(0,0,0,0.25);
 }
 
@@ -23,13 +23,13 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   position: relative;
 }
 
 .program-block {
   background: rgba(201, 210, 210, .11);
   padding: $pad;
+  margin-top: $space-quad;
 
   &:first-child {
     margin-bottom: $space-and-half;
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   flex: 5 0 50%;
   padding: $pad-and-half;
   min-height: 625px;
@@ -106,6 +107,7 @@
   .logo.-hr {
     height: 19px;
     padding-left: 26px;
+    margin-bottom: 3px;
   }
 }
 
@@ -142,27 +144,17 @@ form {
   .title {
     font-size: 36px;
     margin: 0;
-    margin-top: 12px;
+    margin-top: 24px;
     position: relative;
-     span {
-       font-size: 12px;
-       top: 0;
-       right: -35px;
-       position: absolute;
-       font-weight: 500;
-       color: $color-brand-primary;
-     }
+    color: white;
+    text-align: center;
   }
 
   .portal-title {
-    margin: 60px 0 0 0;
     font-weight: 500;
     text-align: center;
     font-size: 25px;
-
-    &.-forgot-pass {
-      margin-top: 90px;
-    }
+    margin-bottom: 0;
   }
 
   .title-subtext {
