--- a/client/src/assets/styles/pages/_book-interview.scss
+++ b/client/src/assets/styles/pages/_book-interview.scss
@@ -21,6 +21,20 @@
       margin: $space-double $space;
     }
 
+    .pre-question {
+      margin: $space-double;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      p {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 400;
+      }
+    }
+
     .card-holder {
       display: flex;
       flex-wrap: wrap;
